2006-11-07  Andrew Cagney  <cagney@redhat.com>

	* LinuxHost.java: Update, use frysk.sys.proc.ProcBuilder.
	* LinuxProc.java: Ditto.
	* TestLib.java: Ditto.

2006-11-06  Andrew Cagney  <cagney@redhat.com>

	* TestLib.java (tearDown): For all children being killed, add
	their tasks to the list.
	(sendStopXXX): Rename assertSendStop.
	(killDuringTearDown): Fix log formatting.
	(setUp): Don't register a killDuringTearDown observer against
	thread addeded.
	* TestProcStopped.java (stopped): Use Child.sendStopXXX.
	
2006-11-06  Nurdin Premji  <npremji@edhat.com>

	* ProcBlockObserver.java: Ran GNU Formatter.
	(taskAddFailed): Added.
	(ProcBlockTaskObserver): Removed terminating implementation.
	(ProcBlockTaskObserver.addFailed): call taskAddFailed.
	(requestAddObservers): Removed requestAddTerminatingObserver.

2006-11-06  Tim Moore  <timoore@redhat.com>

	* IsaIA32.java (IsaIA32): Add floating point unit configuration 
	registers.
	* IsaX8664.java (IsaX8664): Add floating point and xmm registers.

2006-11-03  Nurdin Premji  <npremji@edhat.com>

	* ProcBlockObserver.java: Split the observer into a main Proc observer and a private
	Task Observer which gets added to each task individually. Allows for better separation
	of addfails between tasks and procs.
	(ProcBlockTaskObserver): Added.
	(requestDeleteInstructionObserver): Added. 
	(requestAddObservers): Changed to add the task Observer rather than the proc Observer to each task.
	(requestDeleteTerminatingObserver): Added.
	(requestUnblock): Changed to unblock task obsever rather than proc observer.
	(blockTask): Ditto.
	* TaskState.java (.handleAddObservation): Fixed typo, "destroyed" instead of "detached".
	
	* TestProcStopped.java (testRunningAttached): Changed to use a ProcBlockObserver.
	(MyTester.MyTester): Ditto.
	(testMultiThreadedStoppedAttached): Ditto.
	(testMultiThreadedRunningAttached): Ditto.
	(running): Ditto.
	(stopped): Ditto.
	(testStoppedAttached): Ditto.
	(MyTester): Ditto.